# qse

./: .gitignore  README.md  pyproject.toml  qse_paper_v2.tex  quick_proofs.py
arxiv_paper/: qse_paper.tex  qse_paper_v2.tex
qse/: __init__.py  core.py  entropy.py  gates.py  layers.py  mutual.py  rank.py
tests/: test_scaling.py  test_theorems.py
